[package]
name = "bevy_ui_widgets"
version = "0.0.0"
edition = "2021"

[dependencies]
# TODO: Change these when merged
bevy_app = "0.8.1"
bevy_asset = "0.8.1"
bevy_ecs = "0.8.1"
bevy_hierarchy = "0.8.1"
bevy_math = "0.8.1"
bevy_render = "0.8.1"
bevy_text = "0.8.1"
bevy_transform = "0.8.1"
bevy_ui = "0.8.1"
bevy_utils = "0.8.1"
bevy_window = "0.8.1"

smallvec = "1.8.0"

[dev-dependencies]
# TODO: Change this when merged
bevy = "0.8.1"

[[example]]
name = "frame"
path = "examples/frame.rs"

[[example]]
name = "tooltip"
path = "examples/tooltip.rs"

[[example]]
name = "tooltip_custom"
path = "examples/tooltip_custom.rs"

[[example]]
name = "slider"
path = "examples/slider.rs"

[[example]]
name = "interaction"
path = "examples/interaction.rs"

[[example]]
name = "toggle"
path = "examples/toggle.rs"
